# RayTracing

./: .gitignore  CMakeLists.txt  MainWidget.cpp  MainWidget.h  common.cpp  common.h  main.cpp  raytracer.cpp  raytracer.h  scene.cpp  scene.h  surface.cpp  surface.h  twister.cpp  twister.h
myRayTracing/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  common.h  constant.h  main.cpp
